--- a/website/src/app/components/ProfileCard/ProfileCard.css
+++ b/website/src/app/components/ProfileCard/ProfileCard.css
@@ -1,16 +1,19 @@
 .card {
-  max-width: 2;
+  width: 80%;
+  height: 100%;
   display: grid;
-  grid-template-rows: 240px 60px;
-  grid-template-columns: 190px 50px;
+  grid-template-rows: 80% 15%;
+  grid-template-columns: 25fr 5fr;
   margin: auto;
 }
 
-.card img {
+.card .profile-img {
   width: 100%;
   height: 100%;
   grid-row: 1/2;
   grid-column: 1/3;
+  border-radius: 5px;
+  box-shadow: 3px 3px 10px #aaaaaa;
   margin: auto;
 }
 
@@ -19,15 +22,20 @@
   height: 100%;
   grid-row: 2/3;
   grid-column: 1/2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.info-text {
+  margin-top: 5px;
 }
 
 .card h3 {
-  font-size: 18px;
   margin: 10px 0px 0px 5px;
 }
 
 .card p {
-  font-size: 14px;
   margin: 2px 5px;
 }
 
@@ -37,6 +45,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 5px;
 }
 
 .logoborder img {
