--- a/website/src/app/components/ProjectCard/ProjectCard.css
+++ b/website/src/app/components/ProjectCard/ProjectCard.css
@@ -1,25 +1,93 @@
-.project-name {
-  font-style: normal;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
-  color: #f58ea6;
-}
-
-.description {
-  font-size: 16px;
-  line-height: 20px;
-}
-
 .project-card {
   box-shadow: 0px 4px 20px rgba(237, 49, 93, 0.5);
   padding: 10px;
   margin: 2%;
   border-radius: 20px;
   flex-basis: 20%;
+  max-width: 375px;
+  min-width: 240px;
+  max-height: 415px;
+  position: relative;
 }
 
-.project-card-image {
+.project-name {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+  color: #f58ea6;
+  text-align: center;
+}
+
+.description {
+  font-size: 16px;
+  line-height: 20px;
   width: 90%;
-  border-radius: 10px;
+  margin: 0 auto 10px;
+  text-align: center;
+}
+
+.upcoming-project-card-image {
+  margin: 0 auto 5px;
+  max-height: 100%;
+  max-width: 100%;
+}
+
+.project-card-image-div {
+  display: flex;
+  align-items: center;
+  height: 50%;
+  width: 100%;
+}
+
+.project-card-more {
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
+  text-decoration: none;
+  float: right;
+  color: var(--dark-pink);
+  font-size: 18px;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 875px) {
+  .project-card {
+    margin: 20px 30px;
+    height: 270px !important;
+    width: 250px;
+    flex-basis: unset;
+  }
+
+  .project-name {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 29px;
+  }
+  
+  .description {
+    font-size: 14px;
+    line-height: 20px;
+    width: 90%;
+    margin: 0 auto 10px;
+    text-align: center;
+  }
+
+  .project-card-more {
+    font-size: 16px;
+  }
+
+  .upcoming-project-card-image {
+    margin: 0 auto 5px;
+    max-height: 100%;
+    max-width: 100%;
+  }
+  
+  .project-card-image-div {
+    display: flex;
+    align-items: center;
+    height: 100px;
+    width: 100%;
+  }
 }
