--- a/website/src/app/components/ProjectCardPurple/ProjectCardPurple.css
+++ b/website/src/app/components/ProjectCardPurple/ProjectCardPurple.css
@@ -6,25 +6,38 @@
   text-align: center;
   color: #BEA9EF;
 }
+
 .description-purple{
   font-size: 16px;
-  line-height: 20px;
+  line-height: 25px;
+  width: 90%;
+  margin: auto;
 }
 
 .project-card-purple{
-  box-shadow: 0px 4px 20px rgba(99, 49, 216, 0.5);
+  box-shadow: 0px 4px 20px rgba(99, 49, 216, 0.75);
   text-align: center;
-  padding: 10px;
+  padding: 20px;
   border-radius: 20px;
 }
 
 .project-card-image{
-  width:90%;
+  width: 90%;
   border-radius: 10px;
 }
 
 @media screen and (max-width:768px){
   .project-card-purple{
-    width: 100%;
+    width: 90%;
+  }
+
+  .project-name-purple{
+    font-size: 20px;
+  }
+
+  .description-purple{
+    font-size: 14px;
+    width: 95%;
+    margin: auto;
   }
 }
