--- a/website/src/app/views/contact-us/ContactUs.css
+++ b/website/src/app/views/contact-us/ContactUs.css
@@ -15,6 +15,7 @@
   width: 30%;
 }
 
+
 @media screen and (max-width: 768px) {
   .heart-logo {
     width: 0%;
@@ -59,29 +60,33 @@
 }
 
 #contact-us-bottom-third {
-  height: 100vh;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+}
+
+#contact-us-bottom-third h1 {
+  color: var(--dark-pink);
+  text-align: center;
 }
 
 .contact-us-bottom-third-items {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  flex-wrap: wrap;
+  width: 45vw;
 }
 
 .bottom-third-info {
   flex-basis: 30%;
 }
 
-@media screen and (max-width: 768px) {
-  .bottom-third-info {
-    flex-basis: 60%;
-  }
+@media screen and (max-width: 1100px) {
+  .contact-us-bottom-third-items {
+    width: 60vw;
+  }    
 }
 
 @media screen and (max-width: 800px) {
@@ -95,5 +100,21 @@
 
   .contact-us-img {
     display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .bottom-third-info {
+    flex-basis: 60%;
+  }
+
+  .contact-us-bottom-third-items {
+    width: 70vw;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .contact-us-bottom-third-items {
+    width: 90vw;
   }
 }
