add animation for values

--- a/website/src/app/views/about/About.css
+++ b/website/src/app/views/about/About.css
@@ -83,7 +83,7 @@ h2:hover > .off {
   font-size: 40px;
 }
 
-.our-values-panel > p {
+.values-description{
   width: 60%;
   margin: 0px auto 20px auto;
   line-height: 25px;
