--- a/website/src/app/views/contact-us/ContactUs.css
+++ b/website/src/app/views/contact-us/ContactUs.css
@@ -32,7 +32,7 @@
 
 .middle-third-info {
   flex-basis: 40%;
-  margin: 15%;
+  margin: 20px 15% 40px 15%;
 }
 
 .middle-contact-header {
@@ -60,7 +60,8 @@
 }
 
 #contact-us-bottom-third {
-  min-height: 80vh;
+  /* min-height: 80vh; */
+  margin: 40px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
