--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,7 +1,8 @@
 @import "styles/common.css";
 
 .top-blob {
-    width: 700px;
+    width: 45%;
+    min-width: 800px;
     height: auto;
     position: absolute;
     top: 0px;
@@ -19,13 +20,10 @@
     flex: 1;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 850px) {
     .top-blob {
-        width: 300px;
+        width: 70%;
+        min-width: 270px;
         height: auto;
-        position: absolute;
-        top: 0px;
-        right: 0px;
-        z-index: -1;
     }
 }
