--- a/website/src/app/components/Navbar/Nav.css
+++ b/website/src/app/components/Navbar/Nav.css
@@ -36,14 +36,16 @@ nav {
   line-height: 20px;
   align-items: center;
   text-align: center;
+  font-weight: bold;
 }
 
 .navigation a:hover {
-  color: var(--light-purple);
+  color: #9d7ee7;
 }
 
 .elem {
-  margin: 0px 30px;
+  margin: 0 70px 0 70px;
+  white-space: nowrap;
 }
 
 .apply-button {
@@ -51,14 +53,21 @@ nav {
   border-radius: 30px;
   width: 150px;
   height: 35px;
-  line-height: 100%;
   border: none;
   box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.5);
 }
 
-.apply-button a {
+#apply-link {
   color: white;
   font-weight: bold;
+  line-height: 100%;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+}
+
+button:focus {
+  outline: 0;
 }
 
 .mobile-nav {
@@ -83,7 +92,7 @@ nav {
   z-index: 100;
 }
 
-@media screen and (max-width: 690px) {
+@media screen and (max-width: 850px) {
   .navigation {
     display: none;
   }
