--- a/website/src/app/views/about/About.css
+++ b/website/src/app/views/about/About.css
@@ -15,6 +15,7 @@ html {
   display: flex;
   justify-content: space-around;
   padding: 0.7em 0;
+  display: none;
 }
 
 .links a {
@@ -73,9 +74,8 @@ h2:hover > .off {
 
 .our-values-panel {
   text-align: center;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  min-height: 100vh;
+  margin: 100px auto;
+  max-width: 2000px;
 }
 
 .our-values-panel h1 {
@@ -138,6 +138,8 @@ h2:hover > .off {
 }
 
 .our-team-panel {
+  max-width: 2000px;
+  margin: 50px auto;
   width: 100%;
   display: flex;
   flex-direction: column;
