--- a/website/src/app/views/our-work/OurWork.css
+++ b/website/src/app/views/our-work/OurWork.css
@@ -24,6 +24,7 @@ html {
 }
 
 #middle-our-work {
+  max-width: 2000px;
   margin: 40px auto;
   display: flex;
   flex-direction: column;
@@ -37,6 +38,7 @@ html {
 }
 
 .past-project-section {
+  max-width: 2000px;
   margin: 120px auto;
   display: flex;
   flex-direction: row;
