--- a/website/src/styles/common.css
+++ b/website/src/styles/common.css
@@ -22,6 +22,8 @@ Commit the Change website environment styles.
 }
 
 .top-panel {
+  max-width: 2000px;
+  margin: 0 auto;
   height: calc(100vh - 102px);
   display: flex;
   flex-direction: row;
@@ -89,6 +91,7 @@ Commit the Change website environment styles.
 
   .inside-top-panel-text {
     padding-left: 0;
+    float: none;
   }
 
   .top-panel-pic {
@@ -106,7 +109,7 @@ Commit the Change website environment styles.
   }
 
   .top-panel-description {
-    font-size: 14px;
+    font-size: 16px;
     line-height: 22px;
     margin-bottom: 15px;
     padding: 0 20px;
