--- a/website/src/app/views/contact-us/ContactUs.css
+++ b/website/src/app/views/contact-us/ContactUs.css
@@ -20,10 +20,8 @@
   padding-top: 50px;
 }
 
-.contact-us-middle-third {
-  position: relative;
-  min-height: 50vh;
-  padding: 50px 0;
+.faq-title{
+  margin: 0 20px;
 }
 
 .contact-us-middle-items {
@@ -73,32 +71,20 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  width: 45vw;
+  width: 75%;
 }
 
 .bottom-third-info {
   flex-basis: 30%;
 }
 
-@media screen and (max-width: 1500px) {
-  .heart-logo {
-    top: 20%;
+@media screen and (max-width: 800px) {
+  .question-text{
+    font-size: 18px !important;
   }
-}
-
-@media screen and (max-width: 1100px) {
-  .contact-us-bottom-third-items {
-    width: 60vw;
-  }    
 
   .middle-third-info {
-    padding-top: 0;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .heart-logo {
-    width: 0%;
+    flex-basis: 70%;
   }
 
   .contact-us-top-panel-img {
@@ -112,30 +98,8 @@
   .contact-us-img {
     display: none;
   }
-
-  .contact-us-middle-third {
-    margin: 100px 0;
-  }
-
-  .middle-third-info {
-    margin: 0 auto;
-    text-align: center;
-    padding: 0 5%;
-  }   
-}
-
-@media screen and (max-width: 768px) {
-  .bottom-third-info {
-    flex-basis: 60%;
-  }
-
-  .contact-us-bottom-third-items {
-    width: 70vw;
-  }
-}
-
-@media screen and (max-width: 550px) {
-  .contact-us-bottom-third-items {
-    width: 90vw;
+  
+  .heart-logo {
+    width: 0%;
   }
 }
