--- a/website/src/app/components/Question/Question.css
+++ b/website/src/app/components/Question/Question.css
@@ -1,10 +1,9 @@
 .question-card {
     display: flex;
     flex-direction: column;
-    border-bottom: 1px solid rgba(0,0,0,0.2);
+    box-shadow: 0 1px 0 0 rgba(0,0,0,0.2);
     width: 100%;
-    margin: 25px 80px;
-    max-width: 700px;
+    margin: 25px 10px;
 }
 
 .question-card:focus {
@@ -16,9 +15,9 @@
 }
 
 .symbol {
-    flex: 0 0 50px;
+    flex: 0 0 100px;
     display: inline-flex;
-    /* justify-content: center; */
+    justify-content: center;
 }
 
 .expand-symbol {
@@ -29,7 +28,7 @@
 .top-half {
     display: flex;
     flex-direction: row;
-    padding: 10px 0;
+    padding: 10px;
 }
 
 .top-half h2 {
@@ -49,19 +48,25 @@
 
 
 .bottom-half p {
-    margin-left: 54px;
+    margin-left: 40px;
 }
 
-/* @media screen and (max-width: 600px) {
-    /* .symbol {
+.hidden {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    .symbol {
         flex: 0 0 50px;
-    } */
+    }
 
-    /* .bottom-half p {
-        margin-left: 25px;
-    } */
+    .top-half h2 {
+        font-size: 18px;
+    }
 
-
-.minus{
-    transform: translate(4px, -4px);
+    .bottom-half p {
+        font-size: 16px;
+        margin-left: 20px;
+        padding: 5px;
+    }
 }
