--- a/website/src/app/views/contact-us/ContactUs.css
+++ b/website/src/app/views/contact-us/ContactUs.css
@@ -20,8 +20,10 @@
   padding-top: 50px;
 }
 
-.faq-title{
-  margin: 0 20px;
+.contact-us-middle-third {
+  position: relative;
+  min-height: 50vh;
+  padding: 50px 0;
 }
 
 .contact-us-middle-items {
@@ -71,20 +73,32 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  width: 75%;
+  width: 45vw;
 }
 
 .bottom-third-info {
   flex-basis: 30%;
 }
 
-@media screen and (max-width: 800px) {
-  .question-text{
-    font-size: 18px !important;
+@media screen and (max-width: 1500px) {
+  .heart-logo {
+    top: 20%;
   }
+}
+
+@media screen and (max-width: 1100px) {
+  .contact-us-bottom-third-items {
+    width: 60vw;
+  }    
 
   .middle-third-info {
-    flex-basis: 70%;
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .heart-logo {
+    width: 0%;
   }
 
   .contact-us-top-panel-img {
@@ -98,8 +112,30 @@
   .contact-us-img {
     display: none;
   }
-  
-  .heart-logo {
-    width: 0%;
+
+  .contact-us-middle-third {
+    margin: 100px 0;
+  }
+
+  .middle-third-info {
+    margin: 0 auto;
+    text-align: center;
+    padding: 0 5%;
+  }   
+}
+
+@media screen and (max-width: 768px) {
+  .bottom-third-info {
+    flex-basis: 60%;
+  }
+
+  .contact-us-bottom-third-items {
+    width: 70vw;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .contact-us-bottom-third-items {
+    width: 90vw;
   }
 }
