--- a/website/src/app/views/contact-us/ContactUs.css
+++ b/website/src/app/views/contact-us/ContactUs.css
@@ -20,6 +20,11 @@
   padding-top: 50px;
 }
 
+.faq-title{
+  font-size: 40px;
+  margin: 0 20px 40px 20px;
+}
+
 .contact-us-middle-third {
   position: relative;
   min-height: 50vh;
@@ -36,6 +41,7 @@
 .middle-third-info {
   margin: auto 100px auto 50%;
   padding-top: 10vh;
+  line-height: 25px;
 }
 
 .middle-contact-header {
@@ -57,7 +63,7 @@
 }
 
 #contact-us-bottom-third {
-  margin: 40px auto;
+  margin: 120px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -73,11 +79,25 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  width: 45vw;
+  width: 75%;
 }
 
 .bottom-third-info {
   flex-basis: 30%;
+}
+
+@media screen and (max-width: 800px) {
+  .question-text{
+    font-size: 18px !important;
+  }
+
+  .middle-third-info {
+    flex-basis: 70%;
+  }
+
+  .contact-us-bottom-third-items {
+    width: 70% !important;
+  }
 }
 
 @media screen and (max-width: 1500px) {
@@ -111,6 +131,10 @@
 
   .contact-us-img {
     display: none;
+  }
+  
+  .heart-logo {
+    width: 0%;
   }
 
   .contact-us-middle-third {
