--- a/website/src/app/components/Question/Question.css
+++ b/website/src/app/components/Question/Question.css
@@ -3,11 +3,11 @@
   flex-direction: column;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   width: 100%;
-  margin: 0 80px;
+  margin: 0px 80px;
   max-width: 700px;
 }
 
-.question-card:focus {
+.top-half:focus {
   outline: none;
 }
 
@@ -32,18 +32,17 @@
   padding: 10px 0;
 }
 
-.top-half h2 {
-  display: inline;
+.top-half .question-text {
+  width: 100%;
   font-size: 24px;
   color: var(--light-pink);
   transform: translateY(10px);
   margin: 0 0 10px 0;
 }
 
-.top-half h2:hover {
-color: var(--dark-pink);
+.top-half:hover h2 {
+  color: var(--dark-pink);
 }
-
 
 .bottom-half p {
   margin-left: 54px;
