--- a/website/src/app/views/about/About.css
+++ b/website/src/app/views/about/About.css
@@ -150,6 +150,7 @@ h2:hover > .off {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
 }
 
 .our-team-panel > h1 {
