--- a/website/src/app/components/Question/Question.css
+++ b/website/src/app/components/Question/Question.css
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: column;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  width: 100%;
   margin: 0px 80px;
-  max-width: 700px;
+  width: 90%;
+  max-width: 900px;
 }
 
 .top-half:focus {
@@ -56,5 +56,9 @@
 @media screen and (max-width: 800px) {
   .symbol {
     flex: 0 0 40px;
+  }
+
+  .faq-title {
+    font-size: 36px;
   }
 }
