--- a/website/src/app/views/contact-us/ContactUs.css
+++ b/website/src/app/views/contact-us/ContactUs.css
@@ -23,6 +23,8 @@
 .faq-title{
   font-size: 40px;
   margin: 0 20px 40px 20px;
+  text-shadow: 1px 0 var(--dark-pink)
+
 }
 
 .contact-us-middle-third {
@@ -57,9 +59,10 @@
   font-family: Montserrat;
   font-style: normal;
   font-weight: bold;
-  font-size: 36px;
+  font-size: 40px;
   line-height: 44px;
-  color: #6331d8;
+  color: var(--dark-purple);
+  text-shadow: 1px 0 var(--dark-purple)
 }
 
 #contact-us-bottom-third {
@@ -97,6 +100,10 @@
 
   .contact-us-bottom-third-items {
     width: 70% !important;
+  }
+
+  .middle-contact-title {
+    font-size: 36px;
   }
 }
 
