--- a/website/src/app/views/home/Home.css
+++ b/website/src/app/views/home/Home.css
@@ -38,14 +38,14 @@
     text-align: center;
     font-style: normal;
     font-weight: bold;
-    font-size: 36px;
+    font-size: 40px;
     line-height: 44px;
 }
 
 .bottom-panel .interested{
     text-align: center;
     font-size: 18px;
-    line-height: 30px;
+    line-height: 24px;
     width: 500px;
     margin: auto;
 }
@@ -101,12 +101,14 @@
     font-weight: bold;
     font-size: 36px;
     line-height: 29px;
+    text-shadow: 1px 0 var(--dark-pink);
 }
 
 .social-media-section p {
     text-align: center;
     color: var(--dark-pink);
     font-size: 18px;
+    line-height: 24px;
 }
 
 .media-links {
@@ -172,7 +174,7 @@
     }
 
     .bottom-panel .interested {
-        width: 90%;
+        width: 85%;
         font-size: 16px;
         line-height: 18px;
     }
@@ -210,6 +212,10 @@
     .social-media-section p {
         font-size: 16px;
         line-height: 18px;
+    }
+
+    .social-media-description {
+        padding: 0 15px;
     }
 
     .social-media-section .media-links .fa{
