--- a/website/src/app/components/ProfileCard/ProfileCard.css
+++ b/website/src/app/components/ProfileCard/ProfileCard.css
@@ -1,27 +1,26 @@
 .card {
-  width: 80%;
-  height: 100%;
-  display: grid;
-  grid-template-rows: 80% 15%;
-  grid-template-columns: 25fr 5fr;
-  margin: auto;
+  display: flex;
+  flex-direction: column;
+  margin: 50px 4%;
 }
 
 .card .profile-img {
-  width: 100%;
-  height: 100%;
-  grid-row: 1/2;
-  grid-column: 1/3;
+  max-width: 280px;
+  max-height: 280px;
+  flex: 1 1 280px;
   border-radius: 5px;
   box-shadow: 3px 3px 10px #aaaaaa;
   margin: auto;
 }
 
+.card-bottom {
+  display: flex;
+  width: 280px;
+  margin: auto;
+}
+
 .info {
-  width: 100%;
-  height: 100%;
-  grid-row: 2/3;
-  grid-column: 1/2;
+  flex: 1 auto;
 }
 
 .card h3 {
@@ -33,8 +32,6 @@
 }
 
 .logoborder {
-  grid-row: 2/3;
-  grid-column: 2/3;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,9 +44,38 @@
   margin: auto;
 }
 
-
 .card button:hover, a:hover {
   opacity: 0.7;
+}
+
+@media screen and (max-width: 600px) {
+  .card {
+    margin: 30px 4%;
+  }
+
+  .card .profile-img {
+    max-width: 260px;
+    max-height: 260px;
+  }
+
+  .card-bottom {
+    width: 260px;
+  }
+}
+
+@media screen and (max-height: 500px) {
+  .card {
+    margin: 30px 2%;
+  }
+
+  .card .profile-img {
+    max-width: 260px;
+    max-height: 260px;
+  }
+
+  .card-bottom {
+    width: 260px;
+  }
 }
 
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
