Add button for recruitment interest form on Contact Us page + update some styles

--- a/website/src/styles/common.css
+++ b/website/src/styles/common.css
@@ -70,6 +70,7 @@ Commit the Change website environment styles.
   line-height: 40px;
   text-decoration: none;
   padding: 10px 30px;
+  margin-right: 12px;
 }
 
 @media screen and (max-width: 800px) {
