About Page Updates (#14)
Updates About page for Fall 2021 Recruitment.

--- a/website/src/app/views/contact-us/ContactUs.css
+++ b/website/src/app/views/contact-us/ContactUs.css
@@ -89,6 +89,10 @@
   flex-basis: 30%;
 }
 
+.get-in-touch-button {
+  line-height: 70px;
+}
+
 @media screen and (max-width: 800px) {
   .question-text{
     font-size: 18px !important;
